fix blank spacing around header 2 for projects page

--- a/public_html/css/global.css
+++ b/public_html/css/global.css
@@ -183,6 +183,7 @@ header h3 {
 	font-size: 250%;
 	margin: 20px 0;
 	background-color: darkgreen;
+	padding: 20px;
 	color: white;
 }
 
